Fix blurry svg in some cases for IE11

--- a/src/client/components/SVG/SVG.less
+++ b/src/client/components/SVG/SVG.less
@@ -7,4 +7,5 @@
 .oc-svg svg {
   height: 100%;
   width: 100%;
+  transform: scale(1);
 }
